--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 body {
   font-family: sans-serif;
-  font-size: 10pt;
+  font-size: 13px;
 }
 
 #title {
-  font-size: 10pt;
+  font-size: 14px;
   font-weight: bold;
-  margin: 0.4em;
   color: rgb(240, 240, 240);
+  display: inline;
+  position: fixed;
+  left: 0.6em;
+  top: 0;
 }
 
 #top-panel {
   background-color: rgb(50, 50, 50);
-  padding: 0.2em;
+  padding: 0.5em;
   margin-bottom: 1.5em;
   border-bottom: 2px solid rgb(15, 15, 15);
   position: fixed;
@@ -20,6 +23,8 @@ body {
   top: 0;
   left: 0;
   z-index: 1;
+  color: rgb(240, 240, 240);
+  text-align: right;
 }
 
 #tab-panel {
@@ -46,14 +51,27 @@ body {
 
 #tab-content {
   position: relative;
-  padding: 2em;
   font-family: monospace;
   overflow: auto;
+  font-size: 13px;
+  margin: 1em;
+  margin-top: 1.6em;
 }
 
 #dummy {
   display: none;
   font-family: monospace;
+}
+
+#change-text-size {
+  font-weight: bold;
+  margin-right: 1.5em;
+}
+
+#font-size-dec .ui-button-text, #font-size-inc .ui-button-text {
+  padding: 6px;
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 .paragraph {
