--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
   font-family: sans-serif;
-  font-size: 13px;
+  font-size: 1em;
 }
 
 #title {
-  font-size: 14px;
+  font-size: 1.1em;
   font-weight: bold;
   color: rgb(240, 240, 240);
   display: inline;
@@ -28,19 +28,14 @@ body {
 }
 
 #tab-panel {
-  position: fixed;
-  top: 2em;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
+  margin-top: 4em;
 }
 
 #tab-content {
   position: relative;
   font-family: monospace;
   overflow: auto;
-  font-size: 13px;
+  font-size: 1em;
   margin: 1em;
   margin-top: 1.6em;
 }
