--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 #top-panel {
   background-color: rgb(50, 50, 50);
-  padding: 0.5em;
+  padding: 0.6em;
   margin-bottom: 1.5em;
   border-bottom: 2px solid rgb(15, 15, 15);
   position: fixed;
@@ -51,9 +51,11 @@ body {
 }
 
 #font-size-dec .ui-button-text, #font-size-inc .ui-button-text {
-  padding: 6px;
-  padding-top: 1px;
-  padding-bottom: 1px;
+  padding: 0.5em;
+  padding-top: 0;
+  padding-bottom: 0;
+  font-size: 1.2em;
+  font-weight: bold;
 }
 
 .paragraph {
